--- a/www/Changelog.html
+++ b/www/Changelog.html
@@ -23,6 +23,13 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2002-08-02  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+  * Changed configure argument --disable-16bit-pixel to
+    --with-quantum-depth in order to make its usage more
+    straightforward and generic.  Build ImageMagick using
+    an eight-bit quantum via --with-quantum-depth=8.
+  * Magick++ library builds as a DLL under Windows now.
+
 2002-07-31  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
   * Delegates/modules are restricted to hard-coded search paths (a
     security feature suggested by Bob Friesenhahn).
