*** empty log message ***

--- a/ImageMagick.html
+++ b/ImageMagick.html
@@ -181,8 +181,8 @@ http <A HREF="www/archives.html">mirror sites</A>.
 </P>
 <P>Besides the mirror sites, developers may obtain the ImageMagick
 source code via <A HREF="www/cvs.html">anonymous CVS</A>.</P>
-<P>The entire source and binary distribution is also available for a
-limited time for order on <A HREF="www/cd.html">CD</A>. 
+<P>The entire source and binary distribution is also available 
+as a <A HREF="www/cd.html">CD</A>. 
 </P>
 <TABLE WIDTH=100% BORDER=0 CELLPADDING=2 CELLSPACING=2>
 	<TR>
@@ -559,7 +559,7 @@ ImageMagick topics:
 				Programming with Perl</A></P>
 			</TD>
 			<TD WIDTH=63%>
-				<P>Writen by<!--StartFragment --> <A HREF="http://www.manning.com/verbruggen/#author"><B>Martien
+				<P>Written by<!--StartFragment --> <A HREF="http://www.manning.com/verbruggen/#author"><B>Martien
 				Verbruggen<!--EndFragment--></B></A>. Covers use of ImageMagick's
 				PerlMagick, and other Perl graphic interfaces for graphical
 				programming tasks.</P>
