*** empty log message ***

--- a/www/Changelog.html
+++ b/www/Changelog.html
@@ -23,6 +23,10 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2002-08-04  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
+  * Added experimental 32-bit QuantumDepth pixel support.
+  * Stream support was not thread-safe (bug report by William Radcliffe).
+    
 2002-08-02  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
   * Changed configure argument --disable-16bit-pixel to
     --with-quantum-depth in order to make its usage more
