Changed remote references to conjure.html and Magick++ to local references.

--- a/www/new.html
+++ b/www/new.html
@@ -19,7 +19,7 @@ periodically to see what enhancements have been added. See
 for past enhancements and bug fixes.
 <ul>
 <li>The utility, 
-<a href="http://www.imagemagick.org/www/conjure.html">conjure</a>,
+<a href="conjure.html">conjure</a>,
 interprets the Magick Scripting Language a XML-based language to
 convert, edit, and compose images. </li>
 
@@ -46,7 +46,7 @@ format.</li>
 
 <li>
 Thanks to Bob Friesenhahn ImageMagick now has a C++ wrapper:
-<a href="http://www.imagemagick.org/www/Magick++/">Magick++</a>.</li>
+<a href="Magick++/">Magick++</a>.</li>
 
 <li>
 ImageMagick has a delegate subsystem that allows image formats not directly
