Mention that -pen is deprecated and -fill should be used instead.

--- a/www/ImageMagick.html
+++ b/www/ImageMagick.html
@@ -2699,6 +2699,8 @@ width=15><b><font face="Helvetica, Arial"
 <table width="90%" border="0" cellspacing="0"             cellpadding="8">             <tr><td width="6%"><br></td><td><font size="-1">
 The color is specified using the format described in the "Color Names"
 section of <em>X(1)</em>.</font></td></tr></table>
+<table width="90%" border="0" cellspacing="0"             cellpadding="8">             <tr><td width="6%"><br></td><td><font size="-1">
+This option is deprecated; use <strong>-fill</strong> instead.</font></td></tr></table>
 <table BORDER=0 WIDTH="94%">
 <tr>
 <td width="3%"><br></td> 
