--- a/www/Changelog.html
+++ b/www/Changelog.html
@@ -26,6 +26,10 @@ ImageMagick Changes</font></font></font></b></td>
 2002-08-04  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
   * Added experimental 32-bit QuantumDepth pixel support.
   * Stream support was not thread-safe (bug report by William Radcliffe).
+  * Push/PopImagePixels() now recognizes the proper buffer length
+	  (previously it operated on one scanline at a time).
+  * Deprecated Down/Upscale defines.  Replaced them with Scale*ToQuantum()
+    and ScaleQuantumTo*() methods.
     
 2002-08-02  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
   * Changed configure argument --disable-16bit-pixel to
