Assure that Magick++ files are up to date.

--- a/www/Magick++/NEWS.html
+++ b/www/Magick++/NEWS.html
@@ -13,6 +13,7 @@ This file records noteworthy changes in Magick++.
     to use while writing.<BR>
   <LI> Added a profile() method to Image to support adding, removing,
     and retrieving named embedded application profiles.
+  <LI> Magick++ is built as a DLL under Windows.
 
 </UL>
 <p>
