Fixed "soruce" typo.

--- a/ImageMagick.html
+++ b/ImageMagick.html
@@ -198,7 +198,7 @@ the ImageMagick source code via <A HREF="www/cvs.html">anonymous CVS</A>.</P>
 <P CLASS="western">The entire source and binary distribution is also
 available for order on <A HREF="www/cd.html">CD</A>.</P>
 <P CLASS="western">Installation instructions are available <A HREF="www/install.html">here</A>
-for building ImageMagick from soruce code under Unix, VMS, Windows ,
+for building ImageMagick from source code under Unix, VMS, Windows ,
 and Macintosh.</P>
 <TABLE WIDTH=100% BORDER=0 CELLPADDING=2 CELLSPACING=2>
 	<TR>
