*** empty log message ***

--- a/ImageMagick.html
+++ b/ImageMagick.html
@@ -587,7 +587,7 @@ coverage of ImageMagick topics:
 				Programming with Perl</A></P>
 			</TD>
 			<TD WIDTH=63%>
-				<P CLASS="western">Writen by<!--StartFragment --> <A HREF="http://www.manning.com/verbruggen/#author"><B>Martien
+				<P CLASS="western">Written by<!--StartFragment --> <A HREF="http://www.manning.com/verbruggen/#author"><B>Martien
 				Verbruggen<!--EndFragment--></B></A>. Covers use of ImageMagick's
 				PerlMagick, and other Perl graphic interfaces for graphical
 				programming tasks.</P>
