--- a/ImageMagick.html
+++ b/ImageMagick.html
@@ -40,7 +40,7 @@
 </FORM>
 <HR>
 <P CLASS="western">ImageMagick<FONT SIZE=1><SUP>TM</SUP></FONT> is a
-robust collection of tools and libraries offered under a liberal
+robust collection of tools and libraries offered under a 
 usage <A HREF="www/Copyright.html">license</A> to read, write, and
 manipulate an image in many image <A HREF="www/formats.html">formats</A>
 (over 68 major formats) including popular formats like TIFF, JPEG,
