--- a/www/Changelog.html
+++ b/www/Changelog.html
@@ -23,6 +23,10 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2002-08-09  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+  * Fixed a libtool bug in order to allow passing -m64 to allow building
+    64-bit ImageMagick using gcc 3.1 or later under SPARC Solaris.
+
 2002-08-04  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
   * Added experimental 32-bit QuantumDepth pixel support.
   * Stream support was not thread-safe (bug report by William Radcliffe).
