*** empty log message ***

--- a/www/api.html
+++ b/www/api.html
@@ -30,6 +30,10 @@ depending on your system.
 Methods to Constitute an Image</a></dd>
 
 <dd>
+<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/composite.html">ImageMagick
+Methods to Composite an Image</a></dd>
+
+<dd>
 <img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/image.html">ImageMagick
 Image Methods</a></dd>
 
@@ -46,7 +50,7 @@ to Reduce the Number of Unique Colors in an Image</a></dd>
 to Segment an Image with Thresholding Fuzzy c-Means</a></dd>
 
 <dd>
-<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/zoom.html">Methods
+<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/resize.html">Methods
 to Resize an Image</a></dd>
 
 <dd>
@@ -64,6 +68,10 @@ to Enhance an Image</a></dd>
 <dd>
 <img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/effect.html">ImageMagick
 Image Effects Methods</a></dd>
+
+<dd>
+<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/fx.html">ImageMagick
+Special Effects Methods</a></dd>
 
 <dd>
 <img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/decorate.html">ImageMagick
