--- a/www/Changelog.html
+++ b/www/Changelog.html
@@ -23,6 +23,25 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2002-08-15  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
+  * Finished 32-Bit QuantumDepth support.
+	* Subimage memory leak fixed (bug report by William Radcliffe).
+
+2002-08-15  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+  * Fix problem with TEXT encoder.  It was prepending the
+    filename to the text.
+
+2002-08-15  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+  * Render Postscript via Ghostscript DLL (gsdll32.dll) under
+    Windows if it can be loaded.  Only ps.c currently uses
+    this to verify there are no problems.
+
+2002-08-14  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
+  * Added 16-bit raw write support to PPM.
+
+2002-08-13  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+  * Re-implemented ReadTTFImage() using the draw.h APIs.
+
 2002-08-09  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
   * Fixed a libtool bug in order to allow passing -m64 to allow building
     64-bit ImageMagick using gcc 3.1 or later under SPARC Solaris.
