--- a/www/Changelog.html
+++ b/www/Changelog.html
@@ -26,6 +26,8 @@ ImageMagick Changes</font></font></font></b></td>
 2002-08-15  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
   * Finished 32-Bit QuantumDepth support.
 	* Subimage memory leak fixed (bug report by William Radcliffe).
+	* Fixed subimage specification memory overrun.
+	* Subimage specification did not work properly under Windows.
 
 2002-08-15  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
   * Fix problem with TEXT encoder.  It was prepending the
