--- a/www/Changelog.html
+++ b/www/Changelog.html
@@ -23,11 +23,20 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2002-08-19  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+  * Added DrawSetTextEncoding() function to specify text
+    encoding (e.g. "UTF-8").
+
+2002-08-16  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+  * Extend 'convert -list type' output so it prints more details.
+  * Fix draw.c problem when specifying font family names that
+    contain spaces.
+
 2002-08-15  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
   * Finished 32-Bit QuantumDepth support.
-	* Subimage memory leak fixed (bug report by William Radcliffe).
-	* Fixed subimage specification memory overrun.
-	* Subimage specification did not work properly under Windows.
+  * Subimage memory leak fixed (bug report by William Radcliffe).
+  * Fixed subimage specification memory overrun.
+  * Subimage specification did not work properly under Windows.
 
 2002-08-15  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
   * Fix problem with TEXT encoder.  It was prepending the
