--- a/www/Changelog.html
+++ b/www/Changelog.html
@@ -23,6 +23,11 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2002-08-22  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+  * Under Windows, define UseInstalledImageMagick to locate
+    components using the registry rather than scanning the
+    filesystem.
+
 2002-08-19  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
   * Added DrawSetTextEncoding() function to specify text
     encoding (e.g. "UTF-8").
