Gave each file a unique title.  Added webmaster links.

--- a/www/animate.html
+++ b/www/animate.html
@@ -3,7 +3,7 @@
 <HTML>
 <HEAD>
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-   <title>ImageMagick - Image Processing and Display Package</title>
+   <title>Animate: ImageMagick - Image Processing and Display Package</title>
    <meta name="description" content="ImageMagick is a robust collection of
    tools and libraries to read, write, and manipulate an image in any of the
    more popular image formats including GIF, JPEG, PNG, PDF, and Photo CD.
@@ -1017,3 +1017,5 @@ href="mailto:webmaster@imagemagick.org"><img SRC="../images/mail.png"
 ALT="ImageMagick Home Page" BORDER=0 height=40 width=40
 align=MIDDLE></a><font size="-2">
 Image manipulation software that works like magic.</font>
+</body>
+</html>
