--- a/www/windows.html
+++ b/www/windows.html
@@ -554,7 +554,12 @@ matching installation via these registry entries.</P>
 <P CLASS="western" STYLE="margin-bottom: 0in"><BR>
 </P>
 <HR>
-<P CLASS="western"><A HREF="../ImageMagick.html"><IMG SRC="../images/home.png" NAME="Graphic43" ALT="Home Page" ALIGN=MIDDLE WIDTH=40 HEIGHT=40 BORDER=0></A><A HREF="../ImageMagick.html">
-</A><FONT SIZE=1>Image manipulation software that works like magic.</FONT></P>
-</BODY>
-</HTML>
+<p><a href="../ImageMagick.html"><img SRC="../images/home.png"
+ALT="ImageMagick Home Page" BORDER=0 height=40 width=40
+align=MIDDLE></a><a 
+href="mailto:webmaster@imagemagick.org"><img SRC="../images/mail.png"
+ALT="ImageMagick Home Page" BORDER=0 height=40 width=40
+align=MIDDLE></a><font size="-2">
+Image manipulation software that works like magic.</font>
+</body>
+</html>
