--- a/www/archives.html
+++ b/www/archives.html
@@ -484,8 +484,12 @@ it means the site has reached its limit of anonymous users. You will
 need to try another site or try again later. 
 </P>
 <HR>
-<P><A HREF="../ImageMagick.html"><IMG SRC="../images/home.png" NAME="Graphic2" ALT="Home Page" ALIGN=MIDDLE WIDTH=40 HEIGHT=40 BORDER=0></A><FONT SIZE=1>&nbsp;&nbsp;
-Image manipulation software that works like magic.</FONT> 
-</P>
-</BODY>
-</HTML>
+<p><a href="../ImageMagick.html"><img SRC="../images/home.png"
+ALT="ImageMagick Home Page" BORDER=0 height=40 width=40
+align=MIDDLE></a><a 
+href="mailto:webmaster@imagemagick.org"><img SRC="../images/mail.png"
+ALT="ImageMagick Home Page" BORDER=0 height=40 width=40
+align=MIDDLE></a><font size="-2">
+Image manipulation software that works like magic.</font>
+</body>
+</html>
