--- a/www/color.html
+++ b/www/color.html
@@ -1776,10 +1776,13 @@ ImageMagick understands color names or hex values (.e.g. white or #ffffff).
 
 </table>
 <p>
-<p><hr><p>
-<dl><a href="../ImageMagick.html"><img SRC="../images/home.png" ALT="Home Page"
-BORDER=0 height=40 width=40 align=MIDDLE></a><font size="-2">
-Image manipulation software that works like magic.</font></dl>
-
+<hr>
+<p><a href="../ImageMagick.html"><img SRC="../images/home.png"
+ALT="ImageMagick Home Page" BORDER=0 height=40 width=40
+align=MIDDLE></a><a 
+href="mailto:webmaster@imagemagick.org"><img SRC="../images/mail.png"
+ALT="ImageMagick Home Page" BORDER=0 height=40 width=40
+align=MIDDLE></a><font size="-2">
+Image manipulation software that works like magic.</font>
 </body>
 </html>
