--- a/www/install.html
+++ b/www/install.html
@@ -1,5 +1,8 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+  "http://www.w3.org/TR/html4/loose.dtd">
 <HTML>
 <HEAD>
+<title>ImageMagick: install</title>
 </HEAD>
 <BODY TEXT="#000000" BGCOLOR="#FFFFFF" LINK="#0000EE" VLINK="#551A8B" ALINK="#FF0000">
 <p>
@@ -1537,5 +1540,13 @@ Magick++
   from the ImageMagick Studio.
 
 
-</BODY>
-</HTML>
+<hr>
+<p><a href="../ImageMagick.html"><img SRC="../images/home.png"
+ALT="ImageMagick Home Page" BORDER=0 height=40 width=40
+align=MIDDLE></a><a 
+href="mailto:webmaster@imagemagick.org"><img SRC="../images/mail.png"
+ALT="ImageMagick Home Page" BORDER=0 height=40 width=40
+align=MIDDLE></a><font size="-2">
+Image manipulation software that works like magic.</font>
+</body>
+</html>
