--- a/www/sponsor.html
+++ b/www/sponsor.html
@@ -91,7 +91,12 @@ US funds to
 </dl>
 <p>
 <hr>
-<p><a href="../ImageMagick.html"><img SRC="../images/home.png" ALT="[home page]" BORDER=0 height=40 width=40 align=MIDDLE></a><font size="-2">&nbsp;&nbsp;
+<p><a href="../ImageMagick.html"><img SRC="../images/home.png"
+ALT="ImageMagick Home Page" BORDER=0 height=40 width=40
+align=MIDDLE></a><a 
+href="mailto:webmaster@imagemagick.org"><img SRC="../images/mail.png"
+ALT="ImageMagick Home Page" BORDER=0 height=40 width=40
+align=MIDDLE></a><font size="-2">
 Image manipulation software that works like magic.</font>
 </body>
 </html>
