*** empty log message ***

--- a/www/api.html
+++ b/www/api.html
@@ -91,6 +91,9 @@ to Annotate an Image</a></dd>
 to Draw on an Image</a></dd>
 
 <dd>
+<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/draw.html">Image Vector Drawing Methods </a></dd>
+
+<dd>
 <img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/montage.html">ImageMagick
 Methods to Create Image Thumbnails</a></dd>
 
