*** empty log message ***

--- a/www/perl.html
+++ b/www/perl.html
@@ -366,7 +366,7 @@ And here is a list of other image manipulation methods you can call:<br>
   translate=&gt;<i>float, float</i>, scale=&gt;<i>float, float</i>,
   rotate=&gt;<i>float</i>. skewX=&gt;<i>float</i>, skewY=&gt;<i> float</i>,
 	align=&gt;{Left, Center, Right},
-	encoding=&gt;{None, SJIScode, Unicode, UTF-8} </td>
+	encoding=&gt;{UTF-8} </td>
   <td>annotate an image with text. See <a href="#misc">QueryFontMetrics</a>
  to get font metrics without rendering any text.</td>
  </tr>
