--- a/www/Changelog.html
+++ b/www/Changelog.html
@@ -25,6 +25,7 @@ ImageMagick Changes</font></font></font></b></td>
 <pre>
 2002-08-25  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
   * Arcs are now rendered properly.
+  * Use -authenticate to specifiy a password when viewing encrypted PDF's.
   * -page was previouly being ignored.
   * Configure files are returned as blobs now (suggested by William
     Radcliffe).
