*** empty log message ***

--- a/www/perl.html
+++ b/www/perl.html
@@ -1764,7 +1764,7 @@ Delegate</i> is missing</td>
  </tr>
   <tr>
  <td>395</td>
-  <td>ConfigurationWarning</td>
+  <td>ConfigureWarning</td>
   <td>there was a problem getting a configuration file</td>
  </tr>
   <tr>
@@ -1829,7 +1829,7 @@ Delegate</i> is missing</td>
  </tr>
   <tr>
  <td>495</td>
-  <td>ConfigurationError</td>
+  <td>ConfigureError</td>
   <td>there was a problem getting a configuration file</td>
  </tr>
 
