--- a/www/Changelog.html
+++ b/www/Changelog.html
@@ -23,6 +23,11 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2002-08-23  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+  * Apply prefix/suffix transformations to ImageMagick program names
+    which are substituted into delegates.mgk.  This fix was requested
+    by Glenn Randers-Pehrson.
+
 2002-08-25  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
   * Arcs are now rendered properly.
   * Use -authenticate to specifiy a password when viewing encrypted PDF's.
