Added cross references to details about options.

--- a/www/conjure.html
+++ b/www/conjure.html
@@ -3,7 +3,7 @@
 <HTML>
 <HEAD>
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-   <title>Conjure: ImageMagick - Image Processing and Display Package</title>
+   <title>conjure: ImageMagick - Image Processing and Display Package</title>
    <meta name="description" content="ImageMagick is a robust collection of
    tools and libraries to read, write, and manipulate an image in any of the
    more popular image formats including GIF, JPEG, PNG, PDF, and Photo CD.
@@ -198,7 +198,7 @@ For a more detailed description of each option, see
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a name="-debug">-debug</a>
+    -debug
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>enable debug printout</td></tr></table>
 <table BORDER=0 WIDTH="94%">
@@ -209,7 +209,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a name="-help">-help</a>
+    -help
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>print usage instructions</td></tr></table>
 <table BORDER=0 WIDTH="94%">
@@ -220,7 +220,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a name="-verbose">-verbose</a>
+    <a href="ImageMagick.html#details-verbose">-verbose</a>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>print detailed information about the image</td></tr></table>
 </td></tr></table>
@@ -468,5 +468,4 @@ href="mailto:webmaster@imagemagick.org"><img SRC="../images/mail.png"
 ALT="ImageMagick Home Page" BORDER=0 height=40 width=40
 align=MIDDLE></a><font size="-2">
 Image manipulation software that works like magic.</font>
-</body>
-</html>
+</body></html>
