Added image compare method

--- a/www/Magick++/ChangeLog.html
+++ b/www/Magick++/ChangeLog.html
@@ -4,6 +4,14 @@
 </HEAD>
 <BODY TEXT="#000000" BGCOLOR="#FFFFFF" LINK="#0000EE" VLINK="#551A8B" ALINK="#FF0000">
 <p>
+2002-09-02  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> lib/Image.cpp (compare): New method to compare current image
+        with a reference image.
+
+</UL>
+<p>
 2002-08-19  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
@@ -11,7 +19,7 @@
         default text encoding (e.g. "UTF-8").
 
   <LI> lib/Drawable.cpp (DrawableText): Added an alternate constructor
-        to allow specifying the text encoding.
+        to allow specifying the text encoding (e.g. "UTF-8").
 
 </UL>
 <p>
