--- a/www/Magick++/NEWS.html
+++ b/www/Magick++/NEWS.html
@@ -7,13 +7,23 @@
 This file records noteworthy changes in Magick++.
 
 <p>
+(5.4.9)<BR>
+<UL>
+  <LI> Added the Image textEncoding() method and an encoding option to
+    DrawableText to support specifying "UTF-8" (Unicode) text encoding.
+  <LI> Added the Image compare() method to support comparing two similar
+    images and obtaining error values.<BR>
+  <LI> Magick++ compiles as a DLL under Visual C++ 7.0.
+
+</UL>
+<p>
 (5.4.8)<BR>
 <UL>
   <LI> The image type() method now also specifies the output image type
     to use while writing.<BR>
   <LI> Added a profile() method to Image to support adding, removing,
     and retrieving named embedded application profiles.
-  <LI> Magick++ is built as a DLL under Windows.
+  <LI> Magick++ compiles as a DLL under Visual C++ 6.0.
 
 </UL>
 <p>
